// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helper: Zuora API Request should handle a zuora failure 1`] = `
Array [
  Object {
    "meta": Object {},
    "type": "ZUORA_REQUEST_PENDING",
  },
  Object {
    "meta": Object {},
    "payload": Object {
      "error": [ZuoraApiError: The credit card is bad and wrong],
      "message": "The credit card is bad and wrong",
      "response": Object {
        "data": Object {
          "reasons": Array [
            Object {
              "message": "The credit card is bad and wrong",
            },
          ],
          "success": false,
        },
      },
    },
    "type": "ZUORA_REQUEST_FAIL",
  },
  Object {
    "payload": Object {
      "message": "The credit card is bad and wrong",
      "type": "error",
    },
    "type": "SHOW_GLOBAL_ALERT",
  },
]
`;

exports[`Helper: Zuora API Request should make a successful call 1`] = `
Array [
  Object {
    "meta": Object {},
    "type": "ZUORA_REQUEST_PENDING",
  },
  Object {
    "meta": Object {},
    "payload": Object {
      "data": Object {
        "success": true,
      },
    },
    "type": "ZUORA_REQUEST_SUCCESS",
  },
]
`;
